--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  date_format: ^2.0.9
   supabase_flutter: ^2.0.0
   cloud_firestore:
   firebase_core:
